# dj-starter-kit

./: README.md  dj_starter_kit_bin  pyproject.toml
dj_starter_kit/: config.py  main.py  utils.py
dj_starter_kit/commands/: __init__.py  project.py  wizard.py
dj_starter_kit/project_starter/: __init__.py  project_starter_manager.py
